syntax = "proto3";

package auth_v1;

option go_package = "github.com/Naumovets/go-auth/pkg/auth_v1;auth_v1";

service AuthV1 {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc GetUsersById (GetUsersByIdRequest) returns (GetUsersByIdResponse);
    rpc GetUserInfo (GetUserInfoRequest) returns (GetUserInfoResponse);
    rpc GetRefreshToken (GetRefreshTokenRequest) returns (GetRefreshTokenResponse);
    rpc GetAccessToken (GetAccessTokenRequest) returns (GetAccessTokenResponse);
}

message User {
    string id = 1;
    string username = 2;
}

message GetUserInfoResponse {
    User user = 1;
}

message GetUserInfoRequest {
    string access_token = 1;
}

message GetUsersByIdRequest {
    repeated string ids = 1;
}

message GetUsersByIdResponse {
    repeated User users = 1;
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string refresh_token = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string refresh_token = 1;
}

message GetRefreshTokenRequest {
    string refresh_token = 1;
}

message GetRefreshTokenResponse {
    string refresh_token = 1;
}

message GetAccessTokenRequest {
    string refresh_token = 1;
}

message GetAccessTokenResponse {
    string access_token = 1;
}